--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
@@ -413,19 +413,24 @@ h4 p{
     /* max-height: 5rem; */
     width: 15rem;
     /* align-content: center; */
-    /* margin-top: 7rem; */
+    margin-top: 7rem;
+    text-decoration: none;
 }
 
-.link a:first-child {
-    margin-top: 50px;
-}
-
-#text {
-    margin-bottom: 100px;
-}
+.main-news-container > div:first-child .link { /* Cible le premier élément parent */
+    display: flex;
+    
+    margin-bottom: 6.5rem; /* Pousse le lien vers le bas */
+  }
+  
+  .main-news-container > div:first-child .link a {
+    display: inline-flex;
+    align-items: center;
+    gap: .5rem; /* Espace entre le texte et l'icône */
+  }
 
 .link a i {
-    margin-left: 1.5rem;
+    margin-left: 1rem;
     text-transform: none;
 }
 /* a:nth-child(add) {
@@ -470,9 +475,35 @@ h4 p{
 }
 
 
+h5 {
+    display: flex;
+    justify-content: center;
+    color: #000000;
+    font-size: 20px;
+    font-family: "Montserrat", serif;
+    font-weight: 500;
+    
+    margin-right: auto;
+    
+    width: 70rem;
+    text-align: center;
+    line-height: 30px;
+    font-weight: 600;
+}
 
-
-
+.infos-p {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #000000;
+    font-size: 20px;
+    font-family: "Montserrat", serif;
+    
+    width: 70rem;
+    text-align: center;
+    line-height: 30px;
+    font-weight: 600;
+}
 
 
 
