--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
@@ -511,11 +511,11 @@ h4 p{
 
 
 .contact-list {
-    
+    display: flex;
 }
 
 .contact-list .list {
-    /* display: flex; */
+    display: flex;
     
 }
 
@@ -546,6 +546,7 @@ h4 p{
     text-transform: uppercase;
     line-height: 30px;
     font-weight: 600;
+    width: 27rem;
 }
 
 .infos-p {
@@ -567,7 +568,10 @@ h4 p{
     border-top: none;
 }
 
-
+.list h5 ,.infos-p{
+    display: block;
+    margin-left: 10rem;
+}
 
 
 
