--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
@@ -134,6 +134,7 @@ p {
     text-align: center;
     line-height: 30px;
     font-weight: 600;
+    width: 75rem;
 }
 
 /***************** icon-part *****************/
@@ -622,10 +623,11 @@ h4 p{
 
   .list:nth-of-type(3) > h5{
     
-    display: flex;
-    width: 100%;
-    margin-left: -11rem;
-    transform: translateX(-7rem);
+    
+    width: 10rem;
+    margin-left: -18rem;
+    
+    /* transform: translateX(7rem); */
   }
 
   .list:nth-of-type(3) p {
@@ -639,9 +641,9 @@ h4 p{
     /* transform: translateX(-10rem); */
     /* transform: translateZ(10rem); */
     /* transform: translateY(10rem); */
-    transform: translate(-10rem)!important;
+    transform: translate(5.1rem)!important;
     /* height: auto; */
-    margin-bottom: 12rem;
+    margin-top: 5rem;
   }
 
 
@@ -651,8 +653,8 @@ h4 p{
     text-align: left;
     /* transform: translateY(-11rem); */
     position: absolute;
-    left: 64.4rem;
-    bottom:-110rem;
+    left: 64.8rem;
+    bottom:-106rem;
   }
 
 
@@ -724,7 +726,7 @@ h4 p{
     justify-content: left;
     
     /* color: #fff; */
-    width: 20rem;
+    width: 10rem;
     margin: 0 10rem;
 }
 
@@ -737,13 +739,14 @@ h4 p{
     align-self: start;
     transform: translateX(-19.5rem);
     margin-top: 1.5rem;
+    /* width: 0; */
 }
 
 p.copyright {
     display: flex;
     justify-content: flex-start;
     margin-top: 5rem;
-    margin-left: -8rem;
+    margin-left: -8rem !important;
     /* width: 10rem; */
 }
 
@@ -753,24 +756,24 @@ p.copyright {
 
 .list p {
     font-size: 15px;
-    display: flex;
-    justify-content: flex-start;
-    margin-left: -8rem;
-    transform: translateY(2.5rem);
-    margin: 0;
+    display: flex !important;
+    justify-content: left;
+    margin-left: -15rem !important;
+    transform: translateX(7rem);
+    width: 20rem;
+    /* margin: 0; */
 }
 
-/* .list:nth-of-type(4) p {
-    display: flex;
-    justify-content: left;
-    color: #000000;
-    font-size: 20px;
-    font-family: "Montserrat", serif;
-    text-transform: uppercase;
-    width: 19rem;
-    margin-right: ;
 
-} */
+.list:nth-child(4) p:nth-child(2) {
+    text-align: left;
+    margin-left: 0;
+    padding-left: 0;
+    display: flex;
+  }
+
+
+
 
 .list h6 {
     margin:0;
