--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
@@ -787,18 +787,98 @@ p.copyright {
   }
   
 
+.contact-medias {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.medias-text {
+    width: 30%;
+}
+
+.medias-text h3 {
+    display: flex;
+    justify-content: left;
+    color: #000000;
+    font-size: 20px;
+    font-family: "Montserrat", serif;
+    text-transform: uppercase;
+    /* line-height: 50px; */
+    font-weight: 600;
+    /* width: 19rem; */
+    margin-left: 15rem;
+    /* margin-top: 5rem;
+    margin-bottom: 0; */
+
+}
+
+.medias-text p {
+    display: flex;
+    justify-content: left;
+    color: #000000;
+    font-size: 15px;
+    font-family: "Montserrat", serif;
+    text-transform: uppercase;
+    /* line-height: 50px; */
+    font-weight: 600;
+    width: 25rem;
+    margin-left: 15rem;
+    /* margin-top: 5rem;
+    margin-bottom: 0; */
+}
+
+.medias-logos {
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 2.5rem;
+    margin-left: -5rem;
+}
+
+.medias-logos span {
+    width: 100px;
+    height: 50px;
+    
+}
 
 
+  /**********  FOOTER   *******************/
 
 
+footer {
+    background-color: #000000;
+    border-color: #000;
+    padding: 15px 0;
+}
 
+footer h3 {
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 1.5;
+    transform: translateY(-.5rem);
+}
 
+footer ul {
+    display: flex;
+    justify-content: ;
+    list-style: none;
+    padding: 0;
+}
 
+footer ul li {
+    display: flex;
+    justify-content: center;
+    /* margin: 0 10px; */
+}
 
-
-
-
-
+footer ul li img {
+    width: 50px;
+    height: 50px;
+    margin: 0;
+}
 
 
 
