--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style1.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style1.css
@@ -893,11 +893,21 @@ footer ul li img {
 }
 
 @media screen and (max-width: 425px) {
-    body {
-        margin: 0;
-        padding: 0;
-        box-sizing: content-box;
+    
+    /* html.hydrated{
+        margin: 0!important;
+        padding: 0!important;
+        height: 100%;
+        overflow: hidden;
+    } */
+    
+    html,body {
+        margin: 0!important;
+        padding: 0!important;
+        box-sizing: border-box!important;
         width: 425px!important;
+        height: 100%;
+        
     }
 
 /**********  NAV  *************/
@@ -964,13 +974,20 @@ footer ul li img {
 
     header {
         background-image: url(./assets/img/bg.jpg);
-        background-position: left center;
+        /* background-position: left center;
         background-repeat: no-repeat;
-        background-origin: content-box;
+        background-origin:border-box;
+        background-size: cover; */
         display: grid;
-        width: 100%;
+        /* width: 100%; */
         height: 100%;
+        /* margin: 0!important;
+        padding: 0 -10px 0 0!important; */
+        background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     }
+
 
     #logo {
         display: flex;
@@ -1023,7 +1040,7 @@ footer ul li img {
         display: flex !important;
         justify-content: left!important;
         color: #000000;
-        font-size: 20px;
+        font-size: 11px;
         font-family: "Montserrat", serif;
         font-weight: 500;
         margin-top: 20;
@@ -1032,8 +1049,8 @@ footer ul li img {
         width: 90%;
         text-align: center;
         line-height: 30px;
-        font-weight: 600;
-        text-align: justify;
+        font-weight: 700;
+        /* text-align: justify; */
     }
 
 /**********  ICON-PART  *************/
@@ -1078,8 +1095,12 @@ footer ul li img {
     /***********  NEWS-PART  ***********/
 
     .header-news {
-        display: flex;
+        display: flex!important;
         flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        /* margin-bottom: 10rem; */
+        margin: 0;
     }
 
     .left-part {
@@ -1091,15 +1112,15 @@ footer ul li img {
     .left-part h2{
         display: flex;
         justify-content: center;
-        margin-left: 0;
-        margin-bottom: 0;
+        margin: 0;
         width: 425px!important;
         text-transform: uppercase;
-        font-size: 25px;
+        font-size: 17px;
         color: #4b3f3f;
         font-family: 'montserrat', sans-serif;
-        font-weight: 500;
+        font-weight: 600;
         letter-spacing: 5px;
+        line-height: 1.5;
     }
 
     .left-part p {
@@ -1109,27 +1130,186 @@ footer ul li img {
         width: 100%;
         font-family: 'montserrat', sans-serif;
         font-weight: 500;
-        letter-spacing:3px;
-        font-size: 12px;
+        letter-spacing:1.8px;
+        font-size: 7px;
+        text-align: justify;
+        padding: 0 10px;
     }
 
     .right-part {
-        display:flex;
-        float: both;
-        
-
+        display: flex!important;
+        justify-content: center!important;
+        /* margin-bottom: 10rem; */
+        transform: translateY(.1rem);
+        margin: 0;
+        padding-bottom: 3rem;
     }
 
     .right-part button {
-        /* display:flex!important;
+        display:flex!important;
         justify-content: center!important;
-        flex-direction: row;
+        margin: 0;
+       
+        /* flex-direction: row;
         flex-wrap: wrap; */
+        /* margin: 0!important;
+        padding: 0!important;
+        justify-self: center!important;
+        align-self: center!important; */
     }
 
     .right-part button i {
         margin-left: 35px;
     }
+
+
+
+/**  MAIN-NEWS  **/
+
+    .main-news-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        /* margin-left: 0; */
+        width: 100%;
+        /* margin-top: 0;
+        margin-bottom: 0; */
+    }
+
+    .main-news-container div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        margin-bottom: 0;
+    }
+
+    .main-news-container div .mn-pic img {
+        width: 70%;
+        height: auto;
+        display: flex;
+        
+    }
+
+    .main-news-container p {
+        display: flex;
+        text-align: justify;
+        /* width: 24rem; */
+        font-family: 'montserrat', sans-serif;
+        font-weight: 500;
+        /* margin: 0;
+        margin-left: 0;
+        padding: 0; */
+        /* margin: 0!important; */
+        margin-top: 1rem;
+        margin-left: 0;
+        font-size: 10px;
+        color: black;
+    }
+
+
+    .main-news-container h4{
+        margin-top: 1rem;
+        margin-left: 0;
+        font-weight: 300;
+        font-size: 20px;
+        word-wrap: break-word;
+        width: 23rem;
+    }
+
+    .main-news-container .link {
+        font-weight: 700;
+        font-size: 20px;
+        word-wrap: break-word;
+        width: 20rem;
+    }
+
+    .link a{
+        display: flex;
+        
+        width: 15rem;
+        margin-top: 7rem;
+        margin-left: -3rem;
+        transform: translateY(-6rem);
+        text-decoration: none;
+        font-weight: 200;
+    }
+
+
+
+
+    
+    .main-news-container > div:first-child .link {
+        display: flex;
+        margin-bottom: 1.5rem;
+        margin-top: 0;
+        /* margin-top: 1rem; */
+        margin-left: 3rem;
+        font-weight: 300;
+        font-size: 20px;
+        word-wrap: break-word;
+        width: 3rem;
+    }
+
+    .main-news-container > div:first-child .link a {
+        display: inline-flex;
+        align-items: center;
+        gap: .5rem;
+    }
+
+    .main-news-container > div:nth-child(2) {
+        display: flex;
+        margin-bottom: 2rem;
+        margin-top: -5rem;
+    }
+
+
+
+    .main-news-container > div:nth-child(2) .link a {
+        display: inline-flex;
+        align-items: center;
+        gap: .5rem;
+        transform: translateY(-5.5rem);
+    }
+
+    
+    .main-news-container > div:nth-child(3) {
+        display: flex;
+        margin-bottom: 2rem;
+        margin-top: -5rem;
+    }
+
+    .main-news-container > div:nth-child(3) .link a {
+        display: flex;
+        margin-left: -3rem;
+        gap: .5rem;
+        transform: translateY(-5.5rem);
+    }
+
+
+    #contact-img img{
+        display: ;
+        margin-left: 0;
+        margin-right: auto;
+        width: 100%;
+        padding: 5rem;
+        transform: translateY(-3rem);
+    }
+
+
+/***************** contact *******************/
+
+    .contact-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+        margin: 0;
+        padding: 0;
+    }
+
   }
   
 
