--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style1.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style1.css
@@ -66,6 +66,7 @@ header {
     background-position: left center;
     background-repeat: no-repeat;
     background-origin: content-box;
+    background-size: cover;
     display: grid;
     width: 100%;
     height: 100%;
@@ -1301,18 +1302,55 @@ footer ul li img {
 
 /***************** contact *******************/
 
-    .contact-list {
-        display: flex;
+   .contact-container .contact-list {
+        display: none;
         flex-direction: column;
         justify-content: center;
-        
         margin: 0;
         padding: 0;
     }
 
-  }
-  
+    .contact-medias {
+        display: none;
+    }
 
 
+footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
 
+footer h3 {
+    display: flex;
+    text-align: center;
+    justify-self: center;
+    flex-direction: column;
+    width: 100%;
+}
 
+footer ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    padding:0;
+    
+}
+
+footer ul li {
+   
+   
+
+}
+
+footer ul li img {
+    display: flex;
+    justify-content: space-evenly;
+    width: 20px;
+    height: 15px;
+    margin: 0;
+    padding: 0!important;
+    
+}
+
+}
