--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -9,17 +9,21 @@ html , body {
     font-size: 16px;
     line-height: 1.6;
     color: #ffffff;
-    background-color: #615555;
+    /* background-color: #615555; */
 }
+
+/*********  NAV BAR ********/
+
 
 nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     /* align-items: center; */
-    padding: 2rem 2rem;
+    padding: 1.5rem 1rem .5rem 1rem;
     background-color: #ffffff;
     color: #000;
+    margin: 0;
 }
 
 nav ul {
@@ -27,6 +31,7 @@ nav ul {
     justify-content: center;
     list-style: none;
     /* padding: 0 5rem; */
+    
     
 }
 
@@ -39,14 +44,15 @@ nav ul li {
     font-weight: 700;
     font-style: normal;
     font-size: 20px;
+    margin: 0;
 }
 
 nav ul li:first-child {
     
     color: blue;
     border-top: blue 5px solid;
-    padding-top: 28px;
-    transform: translateY(-32px);
+    padding-top: 19.5px;
+    transform: translateY(-25px);
     padding-left: 0;
     padding-right: 0;
 }
@@ -57,34 +63,107 @@ nav ul li:first-child {
 
 nav ul li:nth-child(8) {
     position: relative;
-    top: -.9rem;
-    width: 9rem;
+    top: -.7rem;
+    width: 8.2rem;
     border-radius:85px;
-    border:solid #beb2b2;
+    border:1px solid #beb2b2;
     background-color:#beb2b2;
-    padding-top: 10.5px;
+    padding-top: 9.5px;
     
 }
 
+/********* HEADER ********/
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 0;
+    background-color: #000;
+    color: #fff;
+}
+
+header  .main-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem 0;
+    background-color: #000;
+    color: #fff;
+}
+
+header .main-header {
+    background: url(./assets/img/bg.jpg) no-repeat;
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-position: center;
+}
+
+p {
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 1.6;
+    text-align: center;
+    background-color: #ffffff;
+    padding:1rem 5rem 5rem 5rem;
+    width: 80rem;
+    margin: 0 auto;
+    color: #000;
+}
 
 
+/********* ICON-PART ********/
 
 
+.icon-part-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:0;
+    margin: 0;
+    background-color: #000;
+    color: #fff;
+}
 
+.list-icon-part {
+    width: 20%;
+}
 
+.list-icon-part h3 {
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 1.6;
+    text-align: center;
+    background-color: #000;
+    padding: 2rem 0;
+    margin: 0 auto;
+}
 
+.list-icon-part p {
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 1.6;
+    text-align: center;
+    background-color: #000;
+    padding: 1rem 0;
+    margin: 0 auto;
+    color: #fff;
+    width: 83%;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.lip-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    background-color: #000;
+    color: #fff;
+    
+}
 
 
 
