--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -121,7 +121,7 @@ p {
 .icon-part-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding:0;
     margin: 0;
     background-color: #000;
@@ -152,6 +152,25 @@ p {
     margin: 0 auto;
     color: #fff;
     width: 83%;
+}
+
+.list-icon-part button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+    margin: 0 auto;
+    background-color: #000;
+    color: #fff;
+    width: 83%;
+    border: 1px solid #fff;
+    border-radius: 5px;
+}
+
+.list-icon-part ,button:nth-child(2) {
+    
+    background-color: chartreuse;
+    margin-top: 10rem;
 }
 
 .lip-logo {
