--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -122,7 +122,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding:0;
+    padding:5rem 0;
     margin: 0;
     background-color: #000;
     color: #fff;
@@ -167,10 +167,22 @@ p {
     border-radius: 5px;
 }
 
-.list-icon-part ,button:nth-child(2) {
+.list-icon-part:nth-child(1) button{
     
     background-color: chartreuse;
-    margin-top: 10rem;
+    margin-top: 2rem;
+}
+
+.list-icon-part:nth-child(2) button{
+    
+    background-color: chartreuse;
+    margin-top: 4.4rem;
+}
+
+.list-icon-part:nth-child(3) button{
+    
+    background-color: chartreuse;
+    margin-top: 6.8rem;
 }
 
 .lip-logo {
@@ -185,19 +197,90 @@ p {
 }
 
 
+/********* NEWS-PART ********/
 
+.header-news {
+    /* display: flex;
+    flex-direction: column; */
+    
+}
 
+.header-news .left-part {
+    /* display: flex;
+    flex-direction: column; */
+    width: 60%;
+}
 
+.header-news .left-part h2 {
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 1.6;
+    /* text-align: start; */
+    /* background-color: #000; */
+    padding: 2rem 0;
+    margin: 0 auto;
+    margin-left: 20.38rem;
+    color: #000000;
+}
 
+.header-news .left-part p {
+    /* display: flex; */
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 1.6;
+    text-align:left;
+    /* background-color: #000; */
+    padding: 1rem 0;
+    margin: 0 auto;
+    margin-left: 20.38rem;
+    width: 70%;
+    /* margin-right:10rem; */
+    color: #000;
+    /* width: 46%; */
+    /* text-align: left; */
+}
 
+.header-news .right-part {
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    padding: 2rem 0;
+    
+    background-color: #743131;
+    color: #fff;
+    /* width: 40%; */
+    /* margin: 0 auto; */
+    float: right;
+}
 
+.header-news .right-part button {  /* stop*/
+    display: block;
+    /* justify-content: center;
+    align-items: center;  */
+    padding: 1rem 0;
+    margin: 0 auto;
+    margin-top: 2rem;
+    margin-right: 35.38rem;
+    margin-top: 1rem;
+    background-color: #2d83bd;
+    color: #000000;
+    border: 5px solid #b65252;
+    border-radius: 5px;
+    width: 10rem;
+    
+    
+}
 
+.header-news .right-part button i {
+    width: 1.5rem;
+    height: auto;
+    margin-left: 1rem;
+}
 
-
-
-
-
-
+.header-news .left-part,.header-news .right-part button {
+    
+    float: left;
+}
 
 
 
