--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -1,302 +1,360 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html , body {
-    font-family: '', sans-serif;
-    font-size: 16px;
-    line-height: 1.6;
-    color: #ffffff;
-    /* background-color: #615555; */
+html,
+body {
+  font-family: "", sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #ffffff;
+  /* background-color: #615555; */
 }
 
 /*********  NAV BAR ********/
 
-
 nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    /* align-items: center; */
-    padding: 1.5rem 1rem .5rem 1rem;
-    background-color: #ffffff;
-    color: #000;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* align-items: center; */
+  padding: 1.5rem 1rem 0.5rem 1rem;
+  background-color: #ffffff;
+  color: #000;
+  margin: 0;
 }
 
 nav ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    /* padding: 0 5rem; */
-    
-    
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  /* padding: 0 5rem; */
+  /* padding-top: 1rem; */
 }
 
 nav ul li {
-    display: flex;
-    padding: 0 1.7rem;
-    text-transform: uppercase;
-    font-family: "Montserrat", serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 20px;
-    margin: 0;
+  display: flex;
+  padding: 0 1.7rem;
+  text-transform: uppercase;
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 20px;
+  margin: 0;
 }
 
 nav ul li:first-child {
-    
-    color: blue;
-    border-top: blue 5px solid;
-    padding-top: 19.5px;
-    transform: translateY(-25px);
-    padding-left: 0;
-    padding-right: 0;
+  color: blue;
+  border-top: blue 5px solid;
+  padding-top: 19.5px;
+  transform: translateY(-25px);
+  padding-left: 0;
+  padding-right: 0;
 }
 
-
-
-
-
 nav ul li:nth-child(8) {
-    position: relative;
-    top: -.7rem;
-    width: 8.2rem;
-    border-radius:85px;
-    border:1px solid #beb2b2;
-    background-color:#beb2b2;
-    padding-top: 9.5px;
-    
+  position: relative;
+  top: -0.7rem;
+  width: 8.2rem;
+  border-radius: 85px;
+  border: 1px solid #beb2b2;
+  background-color: #beb2b2;
+  padding-top: 9.5px;
 }
 
 /********* HEADER ********/
 
 header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem 0;
-    background-color: #000;
-    color: #fff;
-}
-
-header  .main-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 2rem 0;
-    background-color: #000;
-    color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* padding: 2rem 0; */
+  /* background-color: #000; */
 }
 
 header .main-header {
-    background: url(./assets/img/bg.jpg) no-repeat;
-    width: 100%;
-    height: 60vh;
-    background-size: cover;
-    background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background-color: #000;
+  color: #fff;
+}
+
+header .main-header {
+  background: url(./assets/img/bg.jpg) no-repeat;
+  width: 100%;
+  height: 80vh;
+  background-size: cover;
+  background-position: center;
+}
+
+header .main-header h1 {
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.6;
+  text-align: center;
+
+  padding: 1rem 0;
+  margin: 0 auto;
+  color: #fff;
+  text-transform: uppercase;
 }
 
 p {
-    font-size: 1.5rem;
-    font-weight: 300;
-    line-height: 1.6;
-    text-align: center;
-    background-color: #ffffff;
-    padding:1rem 5rem 5rem 5rem;
-    width: 80rem;
-    margin: 0 auto;
-    color: #000;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 1.6;
+  text-align: center;
+  background-color: #ffffff;
+  padding: 3rem 5rem 3rem 5rem;
+  width: 100rem;
+  margin: 0 auto;
+  color: #000;
 }
 
+header .main-header button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+  margin-left: 2rem;
+  margin-right: 5rem;
+  margin: 0 auto;
+  background-color: #ffffff00;
+  color: #ffffff;
+  width: 17rem;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  text-transform: uppercase;
+}
+
+header .main-header button i {
+  width: 1.5rem;
+  height: auto;
+  margin-left: 1rem;
+}
 
 /********* ICON-PART ********/
 
-
 .icon-part-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding:5rem 0;
-    margin: 0;
-    background-color: #000;
-    color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 5rem 0;
+  margin: 0;
+  background-color: #000;
+  color: #fff;
 }
 
 .list-icon-part {
-    width: 20%;
+  width: 20%;
 }
 
 .list-icon-part h3 {
-    font-size: 1.5rem;
-    font-weight: 300;
-    line-height: 1.6;
-    text-align: center;
-    background-color: #000;
-    padding: 2rem 0;
-    margin: 0 auto;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 1.6;
+  text-align: center;
+  background-color: #000;
+  padding: 2rem 0;
+  padding-bottom: 0;
+  margin: 0 auto;
+  text-transform: uppercase;
 }
 
 .list-icon-part p {
-    font-size: 1.5rem;
-    font-weight: 300;
-    line-height: 1.6;
-    text-align: center;
-    background-color: #000;
-    padding: 1rem 0;
-    margin: 0 auto;
-    color: #fff;
-    width: 83%;
+  font-size: 13.5px;
+  font-weight: 300;
+  line-height: 1.6;
+  text-align: center;
+  background-color: #000;
+  padding: 0;
+  margin: 0 auto;
+  color: #fff;
+  width: 83%;
 }
 
 .list-icon-part button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem 0;
-    margin: 0 auto;
-    background-color: #000;
-    color: #fff;
-    width: 83%;
-    border: 1px solid #fff;
-    border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+  margin: 0 auto;
+  background-color: #000;
+  color: #fff;
+  width: 50%;
+  border: 1px solid #fff;
+  border: inset #b9acac;
+  border-radius: 5px;
+  text-transform: uppercase;
 }
 
-.list-icon-part:nth-child(1) button{
-    
-    background-color: chartreuse;
-    margin-top: 2rem;
+.list-icon-part:nth-child(1) button {
+  margin-top: 6.8rem;
 }
 
-.list-icon-part:nth-child(2) button{
-    
-    background-color: chartreuse;
-    margin-top: 4.4rem;
+.list-icon-part:nth-child(2) button {
+  margin-top: 8rem;
 }
 
-.list-icon-part:nth-child(3) button{
-    
-    background-color: chartreuse;
-    margin-top: 6.8rem;
+.list-icon-part:nth-child(3) button {
+  margin-top: 8rem;
 }
 
 .lip-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-    background-color: #000;
-    color: #fff;
-    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  background-color: #000;
+  color: #fff;
 }
-
 
 /********* NEWS-PART ********/
 
 .header-news {
-    /* display: flex;
+  /* display: flex;
     flex-direction: column; */
-    
 }
 
 .header-news .left-part {
-    /* display: flex;
+  /* display: flex;
     flex-direction: column; */
-    width: 60%;
+  width: 60%;
 }
 
 .header-news .left-part h2 {
-    font-size: 1.5rem;
-    font-weight: 300;
-    line-height: 1.6;
-    /* text-align: start; */
-    /* background-color: #000; */
-    padding: 2rem 0;
-    margin: 0 auto;
-    margin-left: 20.38rem;
-    color: #000000;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 1.6;
+
+  text-transform: uppercase;
+  padding: 2rem 0;
+  margin: 0 auto;
+  margin-left: 20.38rem;
+  color: #000000;
+  letter-spacing: 10px;
 }
 
 .header-news .left-part p {
-    /* display: flex; */
-    font-size: 1.5rem;
-    font-weight: 300;
-    line-height: 1.6;
-    text-align:left;
-    /* background-color: #000; */
-    padding: 1rem 0;
-    margin: 0 auto;
-    margin-left: 20.38rem;
-    width: 70%;
-    /* margin-right:10rem; */
-    color: #000;
-    /* width: 46%; */
-    /* text-align: left; */
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 1.6;
+  text-align: left;
+  padding: 0rem 0;
+  margin: 0 auto;
+  margin-left: 20.38rem;
+  margin-top: -2rem;
+  width: 70%;
+  color: #000;
 }
 
 .header-news .right-part {
-    display: flex;
-    flex-direction: column;
-    justify-content: right;
-    padding: 2rem 0;
-    
-    background-color: #743131;
-    color: #fff;
-    /* width: 40%; */
-    /* margin: 0 auto; */
-    float: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  padding: 2rem 0;
+  color: #fff;
+  /* width: 40%; */
+  /* margin: 0 auto; */
+  float: right;
 }
 
-.header-news .right-part button {  /* stop*/
-    display: block;
-    /* justify-content: center;
-    align-items: center;  */
-    padding: 1rem 0;
-    margin: 0 auto;
-    margin-top: 2rem;
-    margin-right: 35.38rem;
-    margin-top: 1rem;
-    background-color: #2d83bd;
-    color: #000000;
-    border: 5px solid #b65252;
-    border-radius: 5px;
-    width: 10rem;
-    
-    
+.header-news .right-part button {
+  /* stop*/
+  display: block;
+  padding: 1rem 0.5rem;
+  margin: 0 auto;
+  margin-top: 0.4rem;
+  margin-right: 35.38rem;
+  background-color: #00000000;
+  color: #000000;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  width: 12rem;
+  text-transform: uppercase;
 }
 
 .header-news .right-part button i {
-    width: 1.5rem;
-    height: auto;
-    margin-left: 1rem;
+  width: 1.5rem;
+  height: auto;
+  margin-left: 0.7rem;
 }
 
-.header-news .left-part,.header-news .right-part button {
-    
-    float: left;
+.header-news .left-part,
+.header-news .right-part button {
+  float: left;
 }
 
+/*****************  MAIN-NEWS ****************/
 
+.main-news {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem 0;
 
+  color: #fff;
+  width: 100%;
+  margin: 0 auto;
+}
 
+.main-news-container {
+  /** 26/02/25 */
+  display: flex;
+  width: 85%;
+}
 
+.main-news-container div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0;
+  color: #fff;
+  width: 10px;
+  margin: 0 auto;
+}
 
+.main-news-container div .mn-pic {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  background-color: #000;
+  color: #fff;
+  width: 15%;
+}
 
+.main-news-container div .mn-pic img {
+  width: 25rem;
+  height: auto;
+}
 
+.main-news-container div h4 {
+  font-size: 16px;
+  font-weight: 300;
+  /* line-height: 1.6; */
+  text-align: left;
+  background-color: #ac0e0e;
+  padding: 1rem 0;
+  /* margin: 0 auto; */
+  margin-right: 2.62rem;
+  color: #fff;
+  width: 200px;
+}
 
-
-
-
-
-
-
-
-
-
-
+.main-news-container p {
+  font-size: 15px;
+  font-weight: 100;
+  display: flex;
+  margin-left: -20rem;
+  /* width: 900px; */
+}
