--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -220,8 +220,7 @@ header .main-header button i {
 /********* NEWS-PART ********/
 
 .header-news {
-  /* display: flex;
-    flex-direction: column; */
+  margin-top: 2rem;
 }
 
 .header-news .left-part {
@@ -273,7 +272,7 @@ header .main-header button i {
   padding: 1rem 0.5rem;
   margin: 0 auto;
   margin-top: 0.4rem;
-  margin-right: 35.38rem;
+  margin-right: 30.38rem;
   background-color: #00000000;
   color: #000000;
   border: 2px solid #000000;
@@ -300,17 +299,18 @@ header .main-header button i {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 5rem 0;
+  padding:0;
+  /* padding-top: 1rem; */
 
   color: #fff;
   width: 100%;
   margin: 0 auto;
 }
 
-.main-news-container {
-  /** 26/02/25 */
+.main-news-container {   /** 26/02/25 */
+  
   display: flex;
-  width: 85%;
+  width: 73%;
 }
 
 .main-news-container div {
@@ -334,27 +334,70 @@ header .main-header button i {
 }
 
 .main-news-container div .mn-pic img {
-  width: 25rem;
-  height: auto;
+  width: 20rem;
+  /* height: auto; */
+  /* display: initial; */
 }
+
+
 
 .main-news-container div h4 {
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 600;
   /* line-height: 1.6; */
   text-align: left;
-  background-color: #ac0e0e;
+  /* background-color: #ac0e0e; */
   padding: 1rem 0;
   /* margin: 0 auto; */
-  margin-right: 2.62rem;
-  color: #fff;
-  width: 200px;
+  margin-right: 4.7rem;
+  color: #000000;
+  width: 250px;
+}
+
+.main-news-container div p {
+  display: initial;
+  font-size: 15px;
+  font-weight: 100;
+  width:3000% ;   /*600px*/
+  padding: 0;
+  margin: 0;
+  margin-right: 1.7rem;
+  text-align: left;
 }
 
 .main-news-container p {
+  display: initial;
   font-size: 15px;
   font-weight: 100;
-  display: flex;
-  margin-left: -20rem;
-  /* width: 900px; */
+  width:3000% ;   /*600px*/
+  padding: 0;
+  margin: 0;
+  margin-right: 1.7rem;
+  text-align: left;
 }
+
+.main-news-container div:nth-child(1)  {
+  margin-top: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
