--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -380,17 +380,44 @@ header .main-header button i {
   margin-top: 1rem;
 }
 
+.main-news-container div .link{
+  display: initial;
+  padding-top: 5rem;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  padding-top: 10rem;
+}
+
+
+
+.main-news-container div .link {
+  
+}
+
+.main-news-container div .link a {
+  width: 20rem;
+  transform: translateX(-10rem)!important;
+  display: flex;
+  /* margin-right: 20rem; */
+  
+}
+
+.main-news-container div .link a:nth-child(1) {
+  margin-top: 1rem;
+  /* transform: translateX(-10rem); */
+}
 
 
 
 
 
 
-
-
-
-
-
+.main-news-container div .link a i {
+  
+  height: auto;
+  margin-left: 1rem;
+}
 
 
 
